--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.msslabfour">
 
+    <permission android:name="com.example.msslabfour.provider.READ_WRITE" android:protectionLevel="normal"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MSSLabFour">
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,6 +19,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:authorities="com.example.msslabfour.provider"
+            android:name=".provider.StudentContentProvider"
+            android:exported="true"
+            android:enabled="true"
+            android:permission="com.example.msslabfour.provider.READ_WRITE" />
     </application>
 
 </manifest>
